# server/docs/swagger.yaml
@@ -9,6 +9,64 @@ definitions:
       message:
         type: string
     type: object
+  github_com_ba-reynolds_gaggle_internal_metrics.HostStats:
+    properties:
+      cpu_percent:
+        type: number
+      disk_percent:
+        type: number
+      disk_total:
+        type: integer
+      disk_used:
+        type: integer
+      load1:
+        type: number
+      load5:
+        type: number
+      load15:
+        type: number
+      mem_percent:
+        type: number
+      mem_total:
+        type: integer
+      mem_used:
+        type: integer
+      uptime_seconds:
+        type: number
+    type: object
+  github_com_ba-reynolds_gaggle_internal_models.ActiveUsers:
+    properties:
+      dau:
+        type: integer
+      wau:
+        type: integer
+    type: object
+  github_com_ba-reynolds_gaggle_internal_models.AdminMetrics:
+    properties:
+      active:
+        $ref: '#/definitions/github_com_ba-reynolds_gaggle_internal_models.ActiveUsers'
+      app:
+        $ref: '#/definitions/github_com_ba-reynolds_gaggle_internal_models.AppStats'
+      host:
+        $ref: '#/definitions/github_com_ba-reynolds_gaggle_internal_metrics.HostStats'
+      views:
+        $ref: '#/definitions/github_com_ba-reynolds_gaggle_internal_models.ViewStats'
+    type: object
+  github_com_ba-reynolds_gaggle_internal_models.AppStats:
+    properties:
+      likes:
+        type: integer
+      messages:
+        type: integer
+      posts:
+        type: integer
+      signups_24h:
+        type: integer
+      users:
+        type: integer
+      views_total:
+        type: integer
+    type: object
   github_com_ba-reynolds_gaggle_internal_models.AppearanceSettings:
     properties:
       fontSize:
@@ -212,6 +270,13 @@ definitions:
     properties:
       time.Time:
         type: string
+    type: object
+  github_com_ba-reynolds_gaggle_internal_models.DayViewCount:
+    properties:
+      day:
+        type: string
+      views:
+        type: integer
     type: object
   github_com_ba-reynolds_gaggle_internal_models.Envelope:
     properties:
@@ -596,6 +661,15 @@ definitions:
       email:
         maxLength: 96
         type: string
+      language:
+        description: Optional UI language seed from the browser. Empty = server default
+          ("en").
+        enum:
+        - en
+        - es
+        - fr
+        - de
+        type: string
       password:
         maxLength: 72
         minLength: 8
@@ -835,6 +909,17 @@ definitions:
         $ref: '#/definitions/github_com_ba-reynolds_gaggle_internal_models.UserProfile'
       username:
         type: string
+    type: object
+  github_com_ba-reynolds_gaggle_internal_models.ViewStats:
+    properties:
+      by_day:
+        items:
+          $ref: '#/definitions/github_com_ba-reynolds_gaggle_internal_models.DayViewCount'
+        type: array
+      requests_per_minute:
+        description: RequestsPerMinute is the number of recorded views in the last
+          60s.
+        type: number
     type: object
 host: localhost:2021
 info:
@@ -1119,6 +1204,50 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Update an assigned badge
+      tags:
+      - admin
+  /admin/metrics:
+    get:
+      description: |-
+        Live host stats (CPU, memory, load, uptime, disk), platform
+        counters, active users, and page-view traffic. Admin only.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_ba-reynolds_gaggle_internal_models.Envelope'
+            - properties:
+                data:
+                  $ref: '#/definitions/github_com_ba-reynolds_gaggle_internal_models.AdminMetrics'
+              type: object
+        "403":
+          description: Forbidden
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_ba-reynolds_gaggle_internal_models.Envelope'
+            - properties:
+                data:
+                  type: object
+                error:
+                  $ref: '#/definitions/github_com_ba-reynolds_gaggle_internal_apperrors.AppError'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_ba-reynolds_gaggle_internal_models.Envelope'
+            - properties:
+                data:
+                  type: object
+                error:
+                  $ref: '#/definitions/github_com_ba-reynolds_gaggle_internal_apperrors.AppError'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Admin metrics dashboard
       tags:
       - admin
   /admin/users/{username}/badges/{badgeID}:
